# IARC-10

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  .pylintrc  Env.Containerfile  README.md  Sim.Containerfile  compose.yml  main.py  mission_config.json  mission_config2.json  mission_config_full.json  mission_config_solo.json  networking_main.py  pyproject.toml  requirements.txt  run.py  run_container.sh  sim_start_drones.sh  update_airsim_settings.ps1
.claude/: settings.local.json
Interdrone-Communication/: .gitignore  OLD_main.py  README.md  _t_2_message_types.py  _t_message_types.py  batman-mesh-setup.sh  batman-net.service  client.py  compile_range_test_data.py  config.json  connection_test.sh  image_script.sh  instruction_set.sh  json_config_reader.py  json_message_utilities.py  json_reader.py  main.py  message_types.py  message_unit_tests.py  network_speed_test.py  network_test.py  networking_interface.py  networking_thread.py  pi_startup_script.sh  psuedo.md  range_test.py  server.py  ssh_scanner.ps1  startup_script.sh  test-results-1.txt  test-results-2.txt  threading_implementation_test.py  typed_dicts_classes.py  vm-batman-setup.sh
aprilTagDetectors/: Drone_coordinates.py
flight/: circlePath.py  extract_gps.py  pathfinder.py  waypoint.py  waypoint_visualization.py
interdrone_communication/: .gitignore  README.md  batman-mesh-setup.sh  batman-net.service  client.py  compile_range_test_data.py  connection_test.sh  image_script.sh  instruction_set.sh  json_config_reader.py  json_message_utilities.py  main.py  message_templates.py  message_types.py  (+14 more)
(+243 files in other folders)
