[project]
name = "iarc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datetime>=6.0",
    "dronekit",
    "dt-apriltags>=3.1.7",
    "keyboard>=0.13.5",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "opencv-python>=4.11.0.86",
    "pathlib>=1.0.1",
    "picamera2>=0.3.31",
    "scikit-image>=0.25.2",
    "ultralytics>=8.4.14",
]

[tool.uv.sources]
dronekit = { url = "https://github.com/MissouriMRR/docs/raw/refs/heads/main/subteams/flight/installation_guide/dronekit-2.9.2-py310-none-any.whl" }
